<resources>
    <string name="app_name">健康运动管家</string>
    <string name="action_settings">Settings</string>
    <string name="tab_menu_alert">日</string>
    <string name="tab_menu_profile">周</string>
    <string name="tab_menu_pay">月</string>
    <string name="tab_menu_setting">我的</string>

    <string name="pref_weight" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.weight</string>
    <string name="pref_title_weight">体重 (kg)</string>
    <string name="pref_default_weight" translatable="false">65.0</string>

    <!-- Preferences -->
    <!-- general settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_group_title_permanent_notification">Permanent Notification</string>
    <string name="pref_group_title_motivation_alert">Motivation Alert</string>

    <string name="pref_header_general">General</string>
    <string name="pref_group_title_personal_settings">个人设置</string>
    <string name="pref_explanation_weight_and_gender">为了准确计算您消耗卡路里，请完善信息哦！</string>
    <string name="pref_summary_notification_permanent">The permanent notification is shown when the app counts your steps in background. You can customize what the app should show you.</string>
    <string name="pref_summary_accelerometer_threshold">The app uses the accelerometer of your device. To optimize the step detection adjust the sensitivity, please.</string>



    <!-- /Will be removed on next update -->

    <string name="pref_notification_motivation_alert_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_enabled</string>
    <string name="pref_title_notification_motivation_alert_enabled">Enable motivation alert</string>
    <string name="pref_notification_motivation_alert_time" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_time</string>
    <string name="pref_title_notification_motivation_alert_time">Motivation alert time</string>
    <string name="pref_notification_motivation_alert_texts" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_texts</string>
    <string name="pref_title_notification_motivation_alert_texts">Motivation notification texts</string>
    <string name="pref_notification_motivation_alert_criterion" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_criterion</string>
    <string name="pref_title_notification_motivation_alert_criterion">Motivation alert criterion</string>
    <string-array name="pref_keys_notification_motivation_alert_criterion">
        <item>less than 90&#65285; of daily step goal</item>
        <item>less than 70&#65285; of daily step goal</item>
        <item>less than 50&#65285; of daily step goal</item>
    </string-array>
    <string-array name="pref_values_notification_motivation_alert_criterion" translatable="false">
        <item>90</item>
        <item>70</item>
        <item>50</item>
    </string-array>



    <string name="pref_step_counter_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.step_counter_enabled</string>
    <string name="pref_title_step_counter_enabled">Permanent step counter</string>
    <string name="pref_summary_step_counter_enabled">The app counts your steps in background.</string>

    <string name="pref_default_gender">男</string>
    <string name="pref_gender" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.gender</string>
    <string name="pref_title_gender">性别</string>
    <string-array name="pref_keys_gender">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="pref_values_gender" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_accelerometer_threshold" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.accelerometer_threshold</string>
    <string name="pref_title_accelerometer_threshold">Sensitivity</string>
    <string-array name="pref_keys_accelerometer_threshold">
        <item>very high</item>
        <item>higher</item>
        <item>high</item>
        <item>normal</item>
        <item>low</item>
        <item>lower</item>
        <item>very low</item>
    </string-array>
    <string-array name="pref_values_accelerometer_threshold" translatable="false">
        <item>0.125</item>
        <item>0.25</item>
        <item>0.50</item>
        <item>0.75</item>
        <item>1.00</item>
        <item>1.25</item>
        <item>1.50</item>
    </string-array>

    <string name="pref_use_wake_lock" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.use_wake_lock</string>
    <string name="pref_title_use_wake_lock">Keep processor awake</string>
    <string name="pref_summary_use_wake_lock">On some devices the processor falls asleep and prevents counting steps. Enable this to keep the processor awake while counting steps - this may drain your battery!</string>


    <string name="pref_notification_permanent_show_steps" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_steps</string>
    <string name="pref_title_notification_permanent_show_steps">Show number of steps walked today</string>
    <string name="pref_notification_permanent_show_distance" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_distance</string>
    <string name="pref_title_notification_permanent_show_distance">Show distance walked today</string>
    <string name="pref_notification_permanent_show_calories" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_calories</string>
    <string name="pref_title_notification_permanent_show_calories">Show number of calories</string>

    <string name="pref_default_daily_step_goal" translatable="false">10000</string>
    <string name="pref_title_daily_step_goal">每日行走目标</string>
    <string name="pref_unit_of_length" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.unit_of_length</string>
    <string name="pref_title_unit_of_length">Unit of length</string>
    <string-array name="pref_keys_unit_of_length">
        <item>kilometers</item>
        <item>miles</item>
    </string-array>
    <string-array name="pref_values_unit_of_length" translatable="false">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string name="unit_of_length_km">1|km|kilometers|km/h</string><!-- 1km = 1km -->
    <string name="unit_of_length_mi">0.621371|mi|miles|mph</string><!-- 1km = 0.621371 miles -->

    <!-- ReportFragment -->
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="steps">步数</string>
    <string name="calories">卡路里</string>
    <string name="activity_summary_subtitle">Summary of activities</string>
    <string name="activity_chart_summary_subtitle">Detailed summary of your activities</string>
    <string name="summary_card_calories">kcal</string>


    <!-- others -->
    <string name="action_calories">Calories</string>
    <string name="action_distance">距离</string>
    <string name="action_steps">Steps</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="operation_failed">Operation failed</string>
    <string name="since">since</string>
    <string name="okay">Okay</string>
    <!-- /others -->



    <string name="training_overview_empty">It seems like you didn\'t used the training functionality, yet. It\'s time to start your training!</string>
    <string name="training_input_message" />
    <string name="training_input_title">Training session</string>
    <string name="activity_title_training">Training</string>
    <string name="hint_training_description">Description</string>
    <string name="hint_training_title">Title</string>
    <string name="hint_training_feeling">Feeling:</string>
    <string name="training_card_calories">kcal</string>
    <string name="training_card_distance_km">km</string>
    <string name="training_card_duration">h</string>
    <string name="training_velocity">km/h</string>
    <string name="training_stop_button">End training now</string>
    <string name="training_default_title">%1$s %4$02d.%3$02d.%2$04d</string>
    <string name="activity_summary_chart_legend_stepgoal">行走目标</string>



    <!-- motivation alert -->
    <string-array name="pref_default_notification_motivation_alert_messages">
        <item>主人，该起床了，健康锻炼始于晨！</item>
    </string-array>
    <string-array name="pref_default_notification_motivation_alert_messages1">
        <item>主人，很晚了，快睡觉吧！</item>
    </string-array>
    <string-array name="pref_default_notification_motivation_alert_messages2">
        <item>主人，午休时间到了，快睡觉吧！</item>
    </string-array>
    <string name="motivation_alert_empty">Set custom alert messages when the achievement of your daily step goal is in danger.\n\nThere will be no alert if no message exists.</string>
    <string name="motivation_alert_input_title">Set motivation alert message</string>
    <string name="motivation_alert_input_message">Set your own custom motivation alert. The app notifies you with one of your texts randomly.</string>
    <string name="motivation_alert_input_empty">Empty motivation alerts are useless, aren\'t they?</string>
    <string name="activity_title_motivation_alerts">Motivation alerts</string>
    <string name="motivation_alert_notification_title">健康运动管家</string>


    <!-- Will be removed on next update -->
    <string name="pref_daily_step_goal" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.daily_step_goal</string>
    <string name="notification_text_steps">%1$s of %2$s 今日行走步数</string>
    <string name="notification_text_distance">%1$.2f %2$s walked today.</string>
    <string name="notification_text_calories">Burned %.2f kcal today.</string>
    <string name="pref_default_name">游客</string>

    <!-- /Will be removed on next update -->

    <!-- walking modes -->
    <string name="activity_title_walking_modes">Walking modes</string>
    <string name="walking_mode_input_title">Walking mode</string>
    <string name="walking_mode_input_message">Set your custom walking mode:</string>
    <string name="walking_mode_at_least_one_is_required">At least one walking mode is required.</string>
    <string name="walking_mode_cannot_delete_active_one">Cannot delete an active walking mode.</string>
    <string name="walking_mode_set_active">Set as active</string>
    <string name="walking_mode_menu_learn">Learn</string>
    <string name="walking_mode_learning_distance_description">Distance to walk:</string>
    <string name="walking_mode_learning_steps_description">Steps walked:</string>
    <string name="walking_mode_learning_stop">End learning mode</string>
    <string name="walking_mode_learning_description">The application can learn the distance per step. Please walk the given distance and press end if you finished.</string>
    <string name="pref_walking_mode_learning_active" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.walking_mode_learning_active</string>
    <string name="step_length">Step length:</string>
    <string name="walking_mode_active_ext"> (active)</string>
    <string name="walking_mode_input_empty">Name and step length are required. Please fill in!</string>
    <string name="hint_walking_mode_name">Name</string>
    <string name="hint_walking_mode_step_length">Step length (Meters)</string>
    <string-array name="pref_default_walking_mode_names">
        <item>Walking</item>
        <item>Running</item>
    </string-array>
    <string-array name="pref_default_walking_mode_step_lenghts" translatable="false">
        <item>0.5</item><!-- step length in meters -->
        <item>0.7</item>
    </string-array>
</resources>
